--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "merge-objects",
   "version": "1.0.3",
   "description": "Merge two objects and concatenate arrays that are values of the same object key.",
-  "main": "merge-objects.js",
+  "main": "lib/merge-objects.js",
   "scripts": {
     "test": "node test/test.js"
   },
